Add keywords to package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 	"types": "dist/index.d.ts",
 	"keywords": [
 		"the binding of isaac",
+		"the binding of isaac vanilla",
+		"the binding of isaac original",
 		"the binding of isaac flash",
 		"tboi",
 		"save editor",
