--- a/.prettierrc
+++ b/.prettierrc
@@ -5,6 +5,5 @@
 	"jsxSingleQuote": true,
 	"semi": true,
 	"printWidth": 80,
-	"proseWrap": "always",
-	"arrayBracketSpacing": false,
+	"proseWrap": "always"
 }
