--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
-  "compilerOptions": {
-    "target": "esnext",     
-    "module": "NodeNext",     
-    "moduleResolution": "NodeNext", 
-    "esModuleInterop": true, 
-    "resolveJsonModule": true,
-    "declaration": true,
-    "strict": true,         
-    "outDir": "./dist",
-    "rootDir": "./src"
-  },
-  "include": ["src/**/*", "package.json"],   
-  "exclude": ["node_modules", "test"],
+	"compilerOptions": {
+		"target": "esnext",
+		"module": "NodeNext",
+		"moduleResolution": "NodeNext",
+		"esModuleInterop": true,
+		"resolveJsonModule": true,
+		"declaration": true,
+		"strict": true,
+		"outDir": "./dist",
+		"rootDir": "./src"
+	},
+	"include": ["src/**/*", "package.json"],
+	"exclude": ["node_modules", "test"]
 }
